[package]
name = "csv_to_odbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.22.8"} 
polars-core = "0.22.7"
polars-io ={version = "0.22.7"}
odbc = "0.17.0"
env_logger = "0.9.0"