[package]
name = "parquet-odbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.24.3", features = ["parquet","diagonal_concat", "diff"]} 
polars-core = "0.24.3"
polars-io ={version = "0.24.3", features = ["parquet"]}

